--- a/style.css
+++ b/style.css
@@ -6,39 +6,85 @@ body {
   font-family: "Racing Sans One", cursive;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
 }
 
 h1.header {
   display: flex;
-  font-size: 2em;
+  font-size: 3em;
   text-shadow: 1px 1px white;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(185, 0, 0, 0.6);
   border: 4px solid lightgrey;
   border-radius: 10px;
-  color: rgba(255, 40, 0);
+  color: rgba(80, 80, 80);
   margin: 0 1em;
   padding: 8px;
 }
 
 .card {
-  display: flex;
+  display: flexbox;
+  flex-direction: column;
   background: rgba(234, 234, 234, 0.6);
   padding: 2em;
   border: 4px solid white;
   border-radius: 10px;
-  margin: 2em 2em;
+  margin: 2em 3em;
 }
 
-.team-info {
+.season-info {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #eee;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  font-size: large;
+  width: auto;
+  margin: 1em;
+}
+
+.season-catagories {
   align-items: center;
   justify-content: center;
-  margin: 0 10px;
+  margin: 10px;
   border: 1px solid #eee;
   padding: 15px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.2);
+  font-size: large;
+  width: fit-content;
+}
+
+.team-info {
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  border: 1px solid #eee;
+  padding: 15px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  font-size: large;
+  width: fit-content;
+}
+
+.driver-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: rgba(234, 234, 234, 0.6);
+  padding: 2em;
+  border: 4px solid white;
+  border-radius: 10px;
+  margin: 2em 3em;
+}
+
+.driver-info {
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+  padding: 15px;
+}
+
+img {
+  border-radius: 10px;
 }
