--- a/style.css
+++ b/style.css
@@ -251,3 +251,46 @@ h1.header {
 img {
   border-radius: 10px;
 }
+
+@media all and (max-width: 576px) {
+  h1.header {
+    display: flex;
+    font-size: 2em;
+    text-shadow: 1px 1px white;
+    justify-content: center;
+    background: rgba(185, 0, 0, 0.6);
+    border: 4px solid lightgrey;
+    border-radius: 10px;
+    color: rgba(80, 80, 80);
+    margin: 0 1em;
+    padding: 8px;
+    max-width: 90vw;
+    overflow-x: hidden;
+  }
+
+  .driver-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    background: rgba(234, 234, 234, 0.4);
+    padding: 2em;
+    border: 4px solid white;
+    border-radius: 10px;
+    margin: 2em 3em;
+    max-width: 90vw;
+    overflow-x: hidden;
+  }
+
+  img {
+    border-radius: 10px;
+    max-width: 90vw;
+    margin: 5px;
+  }
+}
+
+@media all and (max-width: 768px) {
+}
+
+@media all and (max-width: 992px) {
+}
