--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   background-image: url(https://images.unsplash.com/photo-1552849397-3f599d225636?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80);
   height: 100vh;
+  width: 100%;,
   font-family: "Racing Sans One", cursive;
   background-repeat: no-repeat;
   background-size: cover;
@@ -14,7 +15,7 @@ h1.header {
   font-size: 3em;
   text-shadow: 1px 1px white;
   justify-content: center;
-  background: rgba(185, 0, 0, 0.6);
+  background: rgba(185, 0, 0, 1);
   border: 4px solid lightgrey;
   border-radius: 10px;
   color: rgba(80, 80, 80);
@@ -25,7 +26,7 @@ h1.header {
 .card {
   display: flexbox;
   flex-direction: column;
-  background: rgba(234, 234, 234, 0.4);
+  background: rgba(234, 234, 234, 0.1);
   padding: 2em;
   border: 4px solid white;
   border-radius: 10px;
@@ -234,7 +235,7 @@ h1.header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  background: rgba(234, 234, 234, 0.4);
+  background: rgba(234, 234, 234, 0.1);
   padding: 2em;
   border: 4px solid white;
   border-radius: 10px;
@@ -250,9 +251,10 @@ h1.header {
 
 img {
   border-radius: 10px;
+  aspect-ratio: 16/9;
 }
 
-@media all and (max-width: 576px) {
+@media (max-width: 375px) {
   h1.header {
     display: flex;
     font-size: 2em;
@@ -264,8 +266,55 @@ img {
     color: rgba(80, 80, 80);
     margin: 0 1em;
     padding: 8px;
+    max-width: 90%;
+     }
+
+  .driver-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    background: rgba(234, 234, 234, 0.4);
+    padding: 2em;
+    border: 4px solid white;
+    border-radius: 10px;
+    margin: 2em 3em;
+    max-width: 90%;
+
+  }
+
+  .driver-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background: rgba(234, 234, 234, 0.4);
+    padding: 2em;
+    border: 4px solid white;
+    border-radius: 10px;
+    margin: 2em 3em;
+  }
+
+  img {
+    border-radius: 10px;
     max-width: 90vw;
-    overflow-x: hidden;
+    margin: 5px;
+    object-fit: contain;
+  }
+}
+
+@media all and (max-width: 768px) {
+  h1.header {
+    display: flex;
+    font-size: 2em;
+    text-shadow: 1px 1px white;
+    justify-content: center;
+    background: rgba(185, 0, 0, 0.6);
+    border: 4px solid lightgrey;
+    border-radius: 10px;
+    color: rgba(80, 80, 80);
+    margin: 0 1em;
+    padding: 8px;
+    max-width: 90%;
   }
 
   .driver-card {
@@ -287,9 +336,6 @@ img {
     max-width: 90vw;
     margin: 5px;
   }
-}
-
-@media all and (max-width: 768px) {
 }
 
 @media all and (max-width: 992px) {
