--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ img {
   max-width: 90%;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 1024px) {
   body {
     background-image: url(https://images.unsplash.com/photo-1552849397-3f599d225636?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80);
     height: 100vh;
@@ -276,22 +276,11 @@ img {
   }
 
   .driver-card {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
+    display: none;
   }
 
   .driver-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  img {
-    border-radius: 10px;
-    aspect-ratio: 16/9;
-    max-width: 90%;
+    display: none;
   }
 
   .season-info-catagory {
@@ -424,179 +413,29 @@ img {
   margin: 1em;
 }
 
-@media all and (max-width: 768px) {
-  body {
-    background-image: url(https://images.unsplash.com/photo-1552849397-3f599d225636?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80);
-    height: 100vh;
-    width: 100%;
-    font-family: "Racing Sans One", cursive;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
-  h1.header {
-    display: flex;
-    font-size: 2em;
-    text-shadow: 1px 1px white;
-    justify-content: center;
-    background: rgba(185, 0, 0, 0.6);
-    border: 4px solid lightgrey;
-    border-radius: 10px;
-    color: rgba(80, 80, 80);
-    margin: 0 1em;
-    padding: 8px;
-    max-width: 90%;
-  }
-
-  .driver-card {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
-  }
-
-  .driver-info {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  img {
-    border-radius: 10px;
-    aspect-ratio: 16/9;
-    max-width: 90%;
-  }
-
-  .season-info-catagory {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid rgba(185, 0, 0);
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.7);
-    font-size: large;
-    width: auto;
-    margin: 1em;
-    color: white;
-  }
-
-  .season-info-tara {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background: rgb(0, 11, 141, 0.6);
-    background: linear-gradient(
-      90deg,
-      rgba(0, 11, 141, 0.6) 23%,
-      rgba(255, 211, 0, 0.6) 45%,
-      rgba(226, 27, 77, 0.6) 66%
-    );
-    font-size: large;
-    width: auto;
-    margin: 1em;
-  }
-
-  .season-info-katie {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background: rgb(166, 5, 26, 0.6);
-    background: linear-gradient(
-      90deg,
-      rgba(166, 5, 26, 0.6) 58%,
-      rgba(255, 235, 0, 0.6) 69%,
-      rgba(255, 255, 255, 0.6) 78%,
-      rgba(17, 17, 17, 0.6) 97%
-    );
-    font-size: large;
-    width: auto;
-    margin: 1em;
-  }
-
-  .season-info-jason {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background: rgb(245, 128, 0.6);
-    background: linear-gradient(
-      90deg,
-      rgba(245, 128, 0, 0.6) 23%,
-      rgba(71, 199, 252, 0.6) 35%,
-      rgba(255, 255, 255, 0.6) 65%,
-      rgba(0, 0, 0, 0.6) 84%
-    );
-    font-size: large;
-    width: auto;
-    margin: 1em;
-  }
-
-  .season-info-scott {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background: rgb(78, 44, 2, 0.6);
-    background: linear-gradient(
-      90deg,
-      rgba(78, 44, 2, 0.6) 8%,
-      rgba(122, 89, 1, 0.6) 40%,
-      rgba(89, 122, 50, 0.6) 55%,
-      rgba(101, 94, 53, 0.6) 75%,
-      rgba(255, 235, 0, 0.6) 100%
-    );
-    font-size: large;
-    width: auto;
-    margin: 1em;
-  }
-
-  .season-info-graeme {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    background: rgb(0, 210, 190, 0.6);
-    background: linear-gradient(
-      90deg,
-      rgba(0, 210, 190, 0.6) 33%,
-      rgba(170, 169, 173, 0.6) 100%
-    );
-    font-size: large;
-    width: auto;
-    margin: 1em;
-  }
-}
-.season-info-pete {
-  display: flex;
-  flex-wrap: wrap;
+.weekly-total {
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  margin: 20px;
   border: 1px solid #eee;
+  padding: 15px;
   border-radius: 10px;
-  background: rgb(255, 255, 255, 0.6);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0.6) 0%,
-    rgba(0, 0, 0, 0.6) 72%
-  );
+  background: rgba(255, 255, 255, 0.5);
   font-size: large;
-  width: auto;
-  margin: 1em;
+  width: fit-content;
 }
 
-@media all and (max-width: 992px) {
+.season-total {
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 50px;
+  border: 1px solid #eee;
+  padding: 15px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  font-size: large;
+  width: fit-content;
 }
