--- a/style-reflow.css
+++ b/style-reflow.css
@@ -2,7 +2,7 @@ body{
 background:#000;
 color:#fff;
 font-family:sans-serif;}
-
+table {border-collapse: collapse;}
 table, td, th {
 border: 1px solid #FFF;
 }
