--- a/style-reflow.css
+++ b/style-reflow.css
@@ -1,6 +1,6 @@
 body{
 background:#000;
-  background-image: url("gif/ferrari.jpg");
+  background-image: url("gif/f1.jpg");
   background-repeat: no-repeat;
   background-position: right bottom;
   background-attachment: fixed;
