--- a/style-reflow.css
+++ b/style-reflow.css
@@ -50,4 +50,8 @@ background: #b10413;
   .page-reflow main, .page-reflow header, .page-reflow aside  {
     padding: 10px;
   }
+  h1 {
+    font-size: 1.5em;}
+  h2 {
+    font-size: 1.2em;}
 }
